--- a/_data/itgm5_infopartners.yml
+++ b/_data/itgm5_infopartners.yml
@@ -63,6 +63,11 @@
   desc: 
   logo: /itgm/img/klutch.png
 
+- title: OSS Prime
+  link: http://ossprime.ru/
+  desc: 
+  logo: /itgm/img/ossprime.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
