--- a/_data/itgm5_communities.yml
+++ b/_data/itgm5_communities.yml
@@ -161,10 +161,10 @@
       speaker : Наталья Забежинская
       work_place : "QA specialist, ГК Техносерв"
       theme : "Когда нужна валидация тест-кейсов?"
-  #   "16:00" :
-  #     speaker : Евгения Чумачкова
-  #     work_place : DINS
-  #     theme : Формирование требований в виде вариантов использования.
+    "16:00" :
+      speaker : "Модератор: Анна Абрамова"
+      work_place : 
+      theme : "Круглый стол: карта компетенций аналитика."
 
 
 
@@ -272,10 +272,10 @@
       speaker : Андрей Павлов
       work_place : "C.Nord"
       theme : "Пакетный менеджер Nix в качестве замены Virtualenv."
-  #   "16:00" :
-  #     speaker : Александр Кошкин
-  #     work_place : 
-  #     theme : "Черная магия за гранью разумного в Pyhton."
+    "16:00" :
+      speaker : Алексей Петров
+      work_place : "Тренер и консультант, MCTS"
+      theme : "Что такое корпоративная архитектура? (ликбез)"
 
 - title: FProg (Clojure/Erlang/Haskell)
   link: https://plus.google.com/communities/114227952963737516047
@@ -288,15 +288,15 @@
     "14:00" :
       speaker : Игнат Толчанов
       work_place : 
-      theme : "...тема уточняется..."
+      theme : "Про формализмы, описывающие взаимодействия процессов, с примерами на Erlang + еще чем-нибудь (Cloud Haskell, Scala)."
     "15:00" :
-      speaker : "модератор: Николай Рыжиков"
+      speaker : "Ильшад Хабибуллин"
       work_place : Health Samurai Team
-      theme : "... тема уточняется ..."
+      theme : "Опыт разработки в Clojure: генерация компонент и пользовательские интерфейсы на паттерн-матчинге."
     "16:00" :
-      speaker : Алексей Петров
-      work_place : "Тренер и консультант, MCTS"
-      theme : "... тема уточняется ..."
+      speaker : "модератор: Николай Рыжиков"
+      work_place : "Health Samurai Team"
+      theme : "Круглый стол: вопросы и ответы про функциональное программирование."
 
 # - title: SPb Lisp Users
 #   link: http://vk.com/lisp.users
@@ -342,12 +342,12 @@
 
 - title: SPb PostgreSQL User Group
   link: /
-  # schedule:
+  schedule:
 
-  #   "13:00" :
-  #     speaker : Роман Друзягин
-  #     work_place : 404 Group
-  #     theme : Миграции БД на PostgreSQL на практике.
+    "13:00" :
+      speaker : Сергей Новиков
+      work_place : 
+      theme : "... тема уточняется ..."
   #   "14:00" :
   #     speaker : Михаил Хлуднев
   #     work_place : Grid Dynamics
