--- a/_data/itgm5_infopartners.yml
+++ b/_data/itgm5_infopartners.yml
@@ -68,6 +68,11 @@
   desc: 
   logo: /itgm/img/ossprime.png
 
+- title: Kudago
+  link: http://kudago.com/
+  desc: 
+  logo: /itgm/img/kudago.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
