--- a/_data/itgm5_infopartners.yml
+++ b/_data/itgm5_infopartners.yml
@@ -73,6 +73,11 @@
   desc: 
   logo: /itgm/img/kudago.png
 
+- title: LevelUp
+  link: http://levelp.ru
+  desc: 
+  logo: /itgm/img/levelup.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
