--- a/_data/itgm5_infopartners.yml
+++ b/_data/itgm5_infopartners.yml
@@ -78,6 +78,11 @@
   desc: 
   logo: /itgm/img/levelup.png
 
+- title: Uransoft
+  link: http://uransoft.ru
+  desc: 
+  logo: /itgm/img/uransoft.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
