--- a/_data/itgm5_infopartners.yml
+++ b/_data/itgm5_infopartners.yml
@@ -83,6 +83,11 @@
   desc: 
   logo: /itgm/img/uransoft.png
 
+- title: Бизнес Портрет
+  link: http://бизнеспортрет.рф
+  desc: 
+  logo: /itgm/img/businessportret.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
