link to piterjs

--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -18,7 +18,7 @@
 
 - title: Piter JS
   members:
-  link: https://vk.com/piterjs
+  link: https://twitter.com/gopiterjs
   desc: "Сообщество вокруг JavaScript, платформы node.js и все, что с ними связано."
   logo: img/piterjs.jpg
 
