--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -3,45 +3,45 @@
   desc: 
   logo: /itgm/assets/images/logos/da.png
 
-- title: IT talk
-  link: http://it-talk.dataart.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/ittalk.png
+# - title: IT talk
+#   link: http://it-talk.dataart.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/ittalk.png
 
 # - title: Теплица Социальных Технологий
 #   link: http://te-st.ru/
 #   desc: 
 #   logo: /itgm/assets/images/logos/hor.png
 
-- title: LoftBlog
-  link: http://loftblog.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/loftblog.png
+# - title: LoftBlog
+#   link: http://loftblog.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/loftblog.png
 
-- title: ProfsoUX
-  link: http://profsoux.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/profsoux.png
+# - title: ProfsoUX
+#   link: http://profsoux.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/profsoux.png
 
-- title: SECR-2015
-  link: http://2015.secr.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/secr15.png
+# - title: SECR-2015
+#   link: http://2015.secr.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/secr15.png
 
-- title: UMI
-  link: http://www.umi-cms.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/umicms.png
+# - title: UMI
+#   link: http://www.umi-cms.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/umicms.png
 
-- title: Kechinov
-  link: http://mkechinov.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/kechinov.png
+# - title: Kechinov
+#   link: http://mkechinov.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/kechinov.png
 
-- title: Ай-Ти События
-  link: http://it-sobytie.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/itsob.png
+# - title: Ай-Ти События
+#   link: http://it-sobytie.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/itsob.png
 
 # - title: Сын Программиста
 #   link: http://progerson.ru
@@ -53,40 +53,40 @@
 #   desc: 
 #   logo: /itgm/assets/images/logos/haker.png
 
-- title: SPBITRU
-  link: http://spbit.ru
-  desc: 
-  logo: /itgm/assets/images/logos/spbitru.png
+# - title: SPBITRU
+#   link: http://spbit.ru
+#   desc: 
+#   logo: /itgm/assets/images/logos/spbitru.png
 
-- title: kl10tch
-  link: http://kl10tch.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/klutch.png
+# - title: kl10tch
+#   link: http://kl10tch.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/klutch.png
 
-- title: OSS Prime
-  link: http://ossprime.ru/
-  desc: 
-  logo: /itgm/assets/images/logos/ossprime.png
+# - title: OSS Prime
+#   link: http://ossprime.ru/
+#   desc: 
+#   logo: /itgm/assets/images/logos/ossprime.png
 
-- title: Kudago
-  link: http://kudago.com/
-  desc: 
-  logo: /itgm/assets/images/logos/kudago.png
+# - title: Kudago
+#   link: http://kudago.com/
+#   desc: 
+#   logo: /itgm/assets/images/logos/kudago.png
 
-- title: LevelUp
-  link: http://levelp.ru
-  desc: 
-  logo: /itgm/assets/images/logos/levelup.png
+# - title: LevelUp
+#   link: http://levelp.ru
+#   desc: 
+#   logo: /itgm/assets/images/logos/levelup.png
 
-- title: Uransoft
-  link: http://uransoft.ru
-  desc: 
-  logo: /itgm/assets/images/logos/uransoft.png
+# - title: Uransoft
+#   link: http://uransoft.ru
+#   desc: 
+#   logo: /itgm/assets/images/logos/uransoft.png
 
-- title: Бизнес Портрет
-  link: http://бизнеспортрет.рф
-  desc: 
-  logo: /itgm/assets/images/logos/businessportret.png
+# - title: Бизнес Портрет
+#   link: http://бизнеспортрет.рф
+#   desc: 
+#   logo: /itgm/assets/images/logos/businessportret.png
 
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
