--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -10,6 +10,24 @@
   level: Со-организатор
   logo: /itgm/assets/images/logos/spbcio.gif
 
+- title: Петер Сервис
+  link: http://www.billing.ru/
+  desc: 
+  level: Золотой партнер
+  logo: /itgm/assets/images/logos/peterservice.png
+
+- title: EPAM
+  link: http://www.epam-group.ru/
+  desc: 
+  level: Золотой партнер
+  logo: /itgm/assets/images/logos/epam.png
+
+# - title: DINO Systems
+#   link: http://www.dins.ru/
+#   desc: 
+#   level: Серебряный партнер
+#   logo: /itgm/assets/images/logos/dins.png
+
 # - title: First Line Software
 #   link: http://www.firstlinesoftware.com/
 #   desc: 
@@ -27,24 +45,6 @@
 #   desc: 
 #   level: Золотой партнер
 #   logo: /itgm/assets/images/logos/autodesk.png
-
-- title: Петер Сервис
-  link: http://www.billing.ru/
-  desc: 
-  level: Золотой партнер
-  logo: /itgm/assets/images/logos/peterservice.png
-
-- title: EPAM
-  link: 
-  desc: 
-  level: Золотой
-  logo: /itgm/assets/images/logos/epam.png
-
-- title: DINO Systems
-  link: http://www.dins.ru/
-  desc: 
-  level: Серебряный партнер
-  logo: /itgm/assets/images/logos/dins.png
 
 # - title: JetBrains
 #   link: https://www.jetbrains.com/
