--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -2,79 +2,73 @@
   link: http://piter-united.ru/main.html
   desc: Объединение активистов ИТ сообществ Санкт-Петербурга
   level: Организатор
-  logo: /itgm/assets/images/logos/pu.png
+  logo: pu.png
 
 - title: SPb CIO Clob
   link: http://www.spbcioclub.ru/
   desc: Санкт-Петербургский клуб ИТ-директоров.
   level: Со-организатор
-  logo: /itgm/assets/images/logos/spbcio.gif
+  logo: spbcio.gif
 
 - title: Петер Сервис
   link: http://www.billing.ru/
   desc: 
   level: Золотой партнер
-  logo: /itgm/assets/images/logos/peterservice.png
+  logo: peterservice.png
 
 - title: EPAM
   link: http://www.epam-group.ru/
   desc: 
   level: Золотой партнер
-  logo: /itgm/assets/images/logos/epam.png
+  logo: epam.png
 
 # - title: DINO Systems
 #   link: http://www.dins.ru/
 #   desc: 
 #   level: Серебряный партнер
-#   logo: /itgm/assets/images/logos/dins.png
+#   logo: dins.png
 
 # - title: First Line Software
 #   link: http://www.firstlinesoftware.com/
 #   desc: 
 #   level: Золотой партнер
-#   logo: /itgm/assets/images/logos/firstline.png
+#   logo: firstline.png
 
 # - title: ФРИИ
 #   link: http://www.iidf.ru/
 #   desc: 
 #   level: Золотой партнер
-#   logo: /itgm/assets/images/logos/free.png
+#   logo: free.png
 
 # - title: Autodesk
 #   link: http://www.autodesk.ru/
 #   desc: 
 #   level: Золотой партнер
-#   logo: /itgm/assets/images/logos/autodesk.png
+#   logo: autodesk.png
 
 # - title: JetBrains
 #   link: https://www.jetbrains.com/
 #   desc: 
 #   level: Серебряный партнер
-#   logo: /itgm/assets/images/logos/jetbrains.png
+#   logo: jetbrains.png
 
 # - title: DataArt
 #   link: http://www.dataart.ru/
 #   desc: 
 #   level: Серебряный партнер
-#   logo: /itgm/assets/images/logos/da.png
+#   logo: da.png
 
 - title: IT-Grad
   link: http://www.it-grad.ru/
   desc: 
   level: Серебряный партнер
-  logo: /itgm/assets/images/logos/itgrad.png
+  logo: itgrad.png
 
 - title: Luxoft
   link: https://www.luxoft.ru/
   desc: 
   level: Бронзовый партнер
-  logo: /itgm/assets/images/logos/luxoft.png
-
-# - title: ScrumTrek
-#   link: http://scrumtrek.ru/
-#   desc: 
-#   level: Серебряный партнер
-#   logo: /itgm/assets/images/logos/scrumtrek.png
+  logo: luxoft.png
 
 # - title: OSS Prime
 #   link: http://ossprime.ru/
@@ -94,12 +88,6 @@
 #   level: Бронзовый партнер
 #   logo: /itgm/assets/images/logos/a25.png
 
-# - title: Peter Service
-#   link: www.billing.ru
-#   desc: 
-#   level: Бронзовый партнер
-#   logo: /itgm/assets/images/logos/ps.png
-
 # - title: Grid Dynamics
 #   link: http://www.griddynamics.com/
 #   desc: 
@@ -110,4 +98,4 @@
   link: mailto:piterunited@gmail.com
   desc: 
   level: Хотите стать партнером?
-  logo: /itgm/assets/images/logos/newpartner.png
+  logo: newpartner.png
