--- a/_data/itgm6_communities.yml
+++ b/_data/itgm6_communities.yml
@@ -41,28 +41,37 @@
   #     theme : "Круглый стол: кандидаты и HR. Стереотипы, которые нам мешают."
 
 - title: UXSpb
+  id: 1
   link: http://ux-spb.ru/
-  # schedule:
-
-  #   "13:00" :
-  #     speaker : Алексей Гапонов
-  #     work_place : Devexperts
-  #     theme : "Орудия труда. (Не)предвзятый обзор инструментов проектировщика."
-  #   "14:00" :
-  #     speaker : "Захар Кириллов"
-  #     work_place :  "КБ Собака Павлова"
-  #     theme : "Continuous UX: встраиваем IxD в процесс гибкой разработки."
-  #   "15:00" :
-  #     speaker : Артём Тиунов
-  #     work_place :  Jetbrains
-  #     theme : "UX for Geeks."
-  #   "16:00" :
-  #     speaker : Юрий Солоницын
-  #     work_place : ИСТ
-  #     theme : "Точка кипения мозга – защищаем пользователя от перегрузки информацией."
+  schedule:
+     #"13:00" :
+     #  speaker : Алексей Гапонов
+     #  work_place : Devexperts
+     #  theme : "Орудия труда. (Не)предвзятый обзор инструментов проектировщика."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg  
+     #"14:00" :
+     #  speaker : "Захар Кириллов"
+     #  work_place :  "КБ Собака Павлова"
+     #  theme : "Continuous UX: встраиваем IxD в процесс гибкой разработки."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg       
+     #"15:00" :
+     #  speaker : Артём Тиунов
+     #  work_place :  Jetbrains
+     #  theme : "UX for Geeks."
+     #  is_discussion: 0
+     #  speaker_ava: nan.jpg
+     #"16:00" :
+     #  speaker : Юрий Солоницын
+     #  work_place : ИСТ
+     #  theme : "Точка кипения мозга – защищаем пользователя от перегрузки информацией."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg       
 
 
 - title: SPb SPM Club
+  id: 2
   link: https://plus.google.com/u/0/communities/108809460896106613736
   # schedule:
 
@@ -70,18 +79,26 @@
   #     speaker : Александр Бындю
   #     work_place : "ByndyuSoft"
   #     theme : Стендапы в стиле Kanban.
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Алексей Васильев
   #     work_place : SigmaLab
   #     theme : "Применение инструментов TOC. Решение конфликтов, поиск ключевых проблем при постановке процессов."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Андрей Толмачев
   #     work_place : Openway
   #     theme : "Как делать agile с неаджальными банками на примере конкретного проекта, инструментов."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "модератор: Михаил Рыжиков"
   #     work_place : Health Samurai Team
   #     theme : "Круглый стол: Инициация проектов. Техники и инструменты."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 # - title: Agile Piter
 #   link: https://plus.google.com/u/0/communities/112264824472767454602
@@ -105,6 +122,7 @@
   #     theme : "Тестирование в гибкой разрабокте. Круглый стол с сообществом SQA."
 
 - title: IT talk
+  id: 3
   link: http://it-talk.dataart.ru/
   # schedule:
 
@@ -112,20 +130,29 @@
   #     speaker : Александр Суевалов
   #     work_place :  DataArt
   #     theme : Frontend. Keep yourself up to date.
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Максим Шульга
   #     work_place : Код безопасности
   #     theme : Импотека или как перестать залезать в долги.
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Евгений Ефимов
   #     work_place : DataArt
   #     theme : Sick Systems. Как работа уничтожает нас.
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Кирилл Тимофеев
   #     work_place : DataArt
   #     theme : Как упорядочить свои задачи и при этом не перегореть.
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 - title: SPb Community of Analysts
+  id: 4
   link: http://vk.com/spb_analytics
   # schedule:
   
@@ -133,22 +160,31 @@
   #     speaker : Алексей Петров
   #     work_place : "Тренер и консультант, MCTS"
   #     theme : "Дуализм систем и его практическая польза для аналитика."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Александр Овчаренко
   #     work_place : ЗАО НИПК Электрон
   #     theme : "Что делать аналитику без проектировщика интерфейсов?"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Наталья Забежинская
   #     work_place : "QA specialist, ГК Техносерв"
   #     theme : "Когда нужна валидация тест-кейсов?"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "Модератор: Анна Абрамова"
   #     work_place : 
   #     theme : "Круглый стол: карта компетенций аналитика."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 
 
 - title: "DevOps-40 / SPb Linux User Group"
+  id: 5
   link: http://www.meetup.com/DevOps-40/
   # schedule:
 
@@ -156,20 +192,29 @@
   #     speaker : Станислав Богатырёв
   #     work_place : "realloc.spb.ru"
   #     theme : "Секреты в Chef. Один из возможных работающих методов обращения с секретами (пароли, сертификаты, лицензии) в условиях общего доступа к коду Ops и Dev команд. Инструменты: Chef, chef-vault, vault"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Павел Курочкин
   #     work_place : НТЦ "Метротек"
   #     theme : "Разработка highload-системы мониторинга для 50000 (и более) видео-потоков RTP с применением 10G Ethernet пробников на базе FPGA."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Роман Беляковский
   #     work_place : Git in Sky
   #     theme : "Девять месяцев с Ansible: опыт и надежды."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Александр Тарасов
   #     work_place : Альфа-Банк
   #     theme : "Docker в банке."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 - title: Piter JS
+  id: 6
   link: https://vk.com/piterjs
   # schedule:
 
@@ -177,18 +222,26 @@
   #     speaker : "Николай Рыжиков"
   #     work_place : Health Samurai
   #     theme : "JavaScript внутри PostgreSQL."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Антон Плешивцев
   #     work_place : Virool
   #     theme : "Как победить различные браузерные ограничения и сделать крутое приложение. Рассказ про разработку мобильного видеоплеера Covér."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Олег Подсечин
   #     work_place :  Toughbyte
   #     theme : "Новые возможности EcmaScript 6 и 7: генераторы и async/await."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Максим Рыжиков
   #     work_place :  JetBrains
   #     theme : "ПРОтестирование: как устроена Karma."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 # - title: SPb Frontend
 #   link: http://vk.com/spb_frontend
@@ -212,6 +265,7 @@
   #     theme : "Дискуссионные столы на темы io.js, ES6, PostCSS, React, тестирования"
 
 - title: "SPb .Net Community"
+  id: 7
   link: https://plus.google.com/u/0/communities/115643868183582812348
   # schedule:
 
@@ -219,24 +273,33 @@
   #     speaker : Андрей Акиньшин
   #     work_place : Энтерра
   #     theme : "Будущее .NET-разработки."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Никита Козлов
   #     work_place : MySale Group
   #     theme : "DSL без купюр."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : "Дмитрий Нестерук"
   #     work_place :  JetBrains
   #     theme : "Динамическое Прототипирование."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Антон Шабанов
   #     work_place : WaveAccess
   #     theme : "Обзор технологических новинок в .Net с точки зрения Web-программиста."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
     
 
 # - title: SPb Ruby User Group
 #   link: https://plus.google.com/communities/117927540789820622012
 
 - title: SPb Python Interest Group
+  id: 8
   link: http://spbpython.guru/
   # schedule:
 
@@ -244,20 +307,29 @@
   #     speaker : "Александр Козловский / Алексей Малашкевич"
   #     work_place : PonyORM
   #     theme : "Разработка Single Page Applications с помощью Pony ORM."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Сергей Матвеенко
   #     work_place : DataArt
   #     theme : "Развитие петербургского Python сообщества: форматы встреч, темы докладов (brainstorm)."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Андрей Павлов
   #     work_place : "C.Nord"
   #     theme : "Пакетный менеджер Nix в качестве замены Virtualenv."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "Кирилл Борисов"
   #     work_place : Яндекс
   #     theme : "Контроль за качеством кода."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 - title: FProg (Clojure/Erlang/Haskell)
+  id: 9
   link: https://plus.google.com/communities/114227952963737516047
   # schedule:
 
@@ -265,18 +337,26 @@
   #     speaker : Максим Велесюк
   #     work_place : Areo Gaming
   #     theme : "Разработка в Common Lisp с SLIME."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Игнат Толчанов
   #     work_place : 
   #     theme : "Про формализмы, описывающие взаимодействия процессов, с примерами на Erlang + еще чем-нибудь (Cloud Haskell, Scala)."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : "Ильшад Хабибуллин"
   #     work_place : Health Samurai Team
   #     theme : "Опыт разработки в Clojure: генерация компонент и пользовательские интерфейсы на паттерн-матчинге."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "модератор: Николай Рыжиков"
   #     work_place : "Health Samurai Team"
   #     theme : "Круглый стол: вопросы и ответы про функциональное программирование."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 # - title: SPb Lisp Users
 #   link: http://vk.com/lisp.users
@@ -300,6 +380,7 @@
   #     theme : OCaml в gamedev.
 
 - title: "SPb Cloud & Virtualization Community"
+  id: 10
   link: https://vk.com/spb.cloud
   # schedule:
 
@@ -307,20 +388,29 @@
   #     speaker : Михаил Новоселов
   #     work_place : ИТ-ГРАД
   #     theme : "Виртуальная схд в облаке."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : "Юрий Сухов"
   #     work_place : "Veeam Software"
   #     theme : "Защита данных в виртуальных средах."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : "Владимир Подзоров/Роман Скворцов"
   #     work_place : "WELLSERVICE/AMBAHA IT-solutions"
   #     theme : "Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg   
   #   "16:00" :
   #     speaker : "Виталий Грицай / Константин Кудряшов"
   #     work_place : "https://1cloud.ru/"
   #     theme : "Построение инфраструктуры облачного провайдера на примере компании 1cloud."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 - title: SPb PostgreSQL User Group
+  id: 11
   link: /
   # schedule:
 
@@ -328,18 +418,26 @@
   #     speaker : Сергей Новиков
   #     work_place : RealWeb
   #     theme : "Функциональный интерфейс в базе данных и другие хорошие практики."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Роман Друзягин
   #     work_place : 404 Group
   #     theme : "Круглый стол: практика администрирования и troubleshooting PostgreSQL."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Роман Друзягин
   #     work_place : 404 Group
   #     theme : "Круглый стол: работа с PG во фреймворках типа Rails и прочих, плюс и минусы подходов."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Роман Друзягин
   #     work_place : 404 Group
   #     theme : "Круглый стол: практика безопасной разработки под PostgreSQL."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 # - title: SPb Mobile
 #   link: https://plus.google.com/u/0/communities/110822898858097256001
@@ -363,6 +461,7 @@
   #     theme : "Тестирование дизайна мобильных приложений."
 
 - title: SPb GO Community
+  id: 12
   link: "http://groups.google.com/forum/#!forum/golang-ru"
   # schedule:
 
@@ -370,20 +469,29 @@
   #     speaker : Александр Неганов
   #     work_place : 
   #     theme : "Эффективный файловый IO: быстро и сложно."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Виталий Левченко
   #     work_place : 
   #     theme : "NSQ: опыт использования в большой системе."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : "модератор: Виталий Левченко"
   #     work_place : 
   #     theme : "Круглый стол. Go в продакшене: логирование и сбор ошибок, мониторинг, обслуживание."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Алексей Петров
   #     work_place : "Тренер и консультант, MCTS"
   #     theme : "Что такое корпоративная архитектура?"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 - title: SPb Technical Writers
+  id: 13
   link: https://plus.google.com/u/0/communities/111110772662436773783
   # schedule:
 
@@ -391,18 +499,26 @@
   #     speaker : Людмила Арцыбашева
   #     work_place :  
   #     theme : "Разрабатываем документацию с помошью DITA."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Bordelon Kennon
   #     work_place : "United English (USA)"
   #     theme : "Технический писатель → Techwriter. Собеседование 1.0."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Спиридонов Роман
   #     work_place : LoftBlog
   #     theme : "Мастер класс. Живая документация: говорит и показывает техписатель."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : Станислав Салангин
   #     work_place : SPb Tecnical Writers Community
   #     theme : "Круглый стол. Мы писали, мы писали... - Прошлое, настоящее и будущее документации в IT."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
 
 
 
@@ -512,6 +628,7 @@
   #     theme : "Founder Institute SPB, открытие второго сезона."
 
 - title: SPb e-Learning
+  id: 14
   link: "https://www.linkedin.com/groups?home=&gid=8282289"
   # schedule:
 
@@ -519,15 +636,23 @@
   #     speaker : "Ольга Куранова"
   #     work_place : "Центр дистанционного обучения ПГУПС"
   #     theme : "Опыт массового обучения в распределенной компании и проблемы СДО в вузе"
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Андрей Замулин
   #     work_place : "Высшая школа менеджмента СПбГУ"
   #     theme : "Использование переговорного онлайн-тренажера «Roundy» в дистанционном обучении."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "15:00" :
   #     speaker : Лилия Смирнова
   #     work_place : "Корпоративный институт ОАО Газпром"
   #     theme : "Разработка интерактивных упражнений для электронных курсов."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "Игорь Сазонов"
   #     work_place : 
   #     theme : "Moodle с точки зрения программиста и пользователя."
+     #  is_discussion: 1     
+     #  speaker_ava: nan.jpg    
