--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -64,11 +64,11 @@
   level: Серебряный партнер
   logo: itgrad.png
 
-- title: Luxoft
-  link: https://www.luxoft.ru/
-  desc: 
-  level: Бронзовый партнер
-  logo: luxoft.png
+# - title: Luxoft
+#   link: https://www.luxoft.ru/
+#   desc: 
+#   level: Бронзовый партнер
+#   logo: luxoft.png
 
 # - title: OSS Prime
 #   link: http://ossprime.ru/
