--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -14,7 +14,7 @@
   link: http://www.billing.ru/
   desc: 
   level: Золотой партнер
-  logo: peterservice.png
+  logo: ps.jpg
 
 - title: EPAM
   link: http://www.epam-group.ru/
