community page & meetup page for new_site

--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -10,10 +10,10 @@
   desc: Петербургский клуб менеджеров проектов в IT.
   logo: img/spmclub.png
 
-- title: Сообщество аналитиков Санкт-Петербурга
+- title: SPb CoA
   members:  
   link: http://vk.com/spb_analytics
-  desc: Сообщество системных и бизнес аналитиков
+  desc: Сообщество системных и бизнес аналитиков Петербурга.
   logo: img/spbcoa.png
 
 - title: Piter JS
