add new partners mann and portret

--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -83,10 +83,10 @@
 #   desc: 
 #   logo: /itgm/assets/images/logos/uransoft.png
 
-# - title: Бизнес Портрет
-#   link: http://бизнеспортрет.рф
-#   desc: 
-#   logo: /itgm/assets/images/logos/businessportret.png
+- title: Бизнес Портрет
+  link: http://бизнеспортрет.рф
+  desc: 
+  logo: businessportret.png
 
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
